2013-01-29  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* tests/test-logd.c: Add more coverage with tests for logd32 and logd128.
	Also fix file indentation.

2013-01-29  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* dfptypeconv.c (___ieee_32_to_host): Optimize to use word or doublewords
	loads store by using compiler builtins.
	(___ieee_64_to_host): Likewise.
	(___ieee_128_to_host): Likewise.
	(___ieee_32_to_host): Likewise.
	(___ieee_64_to_host): Likewise.
	(___ieee_128_to_host): Likewise.

2013-01-28  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* tests/test-amort.c (main): Fix compile warnings.
	* tests/test-param.c (param_test): Likewise.
	(main): Likewise.

2013-01-24  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/dfpu/numdigits.h (numdigits): Define the decimal bias
	masks in an endianess neutral way.

2013-01-24  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/dfpu/fe_decround.c (__fe_dec_getround): Fix endianess
	issues when getting the rounding mode.
	* sysdeps/powerpc/fpu/fenv_libdfp.h (fenv_union_t): (fenv_union_t): 
	Replace int array with long long.
	* include/convert.h (DFP_TEST_EXCEPTIONS): Likewise.
	(DFP_CLEAR_EXCEPTIONS): Likewise.

2013-01-24  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc32/power8/Implies: New file: POWER8 support.
	* sysdeps/powerpc/powerpc32/power8/fpu/Implies: New file:
	* sysdeps/powerpc/powerpc64/power8/Implies: New file.
	* sysdeps/powerpc/powerpc64/power8/fpu/Implies: New file.

2013-01-18  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* include/convert.h (DEST_INFINITY): Define correct builtin for double
	and long double.
	(DEST_NAN): Likewise.
	(PREFIXED_FUNCTION_NAME): Reformat.
	* base-math/extendddtf.c (extendddtf): Add volatile to double
	operations to avoid long double optimizations and recursive calls.
	* base-math/extendsdtf.c (extendddtf): Likewise.
